tests/errors/first_stage/.define/name_expected/name_expected.as
; defining a constant with no name
.define = 2